// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateTypeScale > should generate a scale with tailwind labels 1`] = `
[
  {
    "clamp": "clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem)",
    "label": "4xl",
    "maxFontSize": 25,
    "minFontSize": 21.6,
    "step": 5,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.3017rem, 1.2347rem + 0.335vw, 1.4943rem)",
    "label": "3xl",
    "maxFontSize": 23.9088,
    "minFontSize": 20.8266,
    "step": 4,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.2551rem, 1.1945rem + 0.3027vw, 1.4291rem)",
    "label": "2xl",
    "maxFontSize": 22.8653,
    "minFontSize": 20.0808,
    "step": 3,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.2101rem, 1.1556rem + 0.2723vw, 1.3667rem)",
    "label": "xl",
    "maxFontSize": 21.8672,
    "minFontSize": 19.3618,
    "step": 2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.1668rem, 1.118rem + 0.2439vw, 1.307rem)",
    "label": "lg",
    "maxFontSize": 20.9128,
    "minFontSize": 18.6685,
    "step": 1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem)",
    "label": "md",
    "maxFontSize": 20,
    "minFontSize": 18,
    "step": 0,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.0847rem, 1.0462rem + 0.1926vw, 1.1954rem)",
    "label": "sm",
    "maxFontSize": 19.127,
    "minFontSize": 17.3555,
    "step": -1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.0459rem, 1.012rem + 0.1694vw, 1.1433rem)",
    "label": "xs",
    "maxFontSize": 18.2922,
    "minFontSize": 16.734,
    "step": -2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.0084rem, 0.9789rem + 0.1477vw, 1.0934rem)",
    "label": "2xs",
    "maxFontSize": 17.4938,
    "minFontSize": 16.1348,
    "step": -3,
    "wcagViolation": undefined,
  },
]
`;

exports[`calculateTypeScale > should generate a scale with tshirt labels 1`] = `
[
  {
    "clamp": "clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem)",
    "label": "4xl",
    "maxFontSize": 25,
    "minFontSize": 21.6,
    "step": 5,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.3017rem, 1.2347rem + 0.335vw, 1.4943rem)",
    "label": "3xl",
    "maxFontSize": 23.9088,
    "minFontSize": 20.8266,
    "step": 4,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.2551rem, 1.1945rem + 0.3027vw, 1.4291rem)",
    "label": "2xl",
    "maxFontSize": 22.8653,
    "minFontSize": 20.0808,
    "step": 3,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.2101rem, 1.1556rem + 0.2723vw, 1.3667rem)",
    "label": "xl",
    "maxFontSize": 21.8672,
    "minFontSize": 19.3618,
    "step": 2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.1668rem, 1.118rem + 0.2439vw, 1.307rem)",
    "label": "l",
    "maxFontSize": 20.9128,
    "minFontSize": 18.6685,
    "step": 1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem)",
    "label": "m",
    "maxFontSize": 20,
    "minFontSize": 18,
    "step": 0,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.0847rem, 1.0462rem + 0.1926vw, 1.1954rem)",
    "label": "s",
    "maxFontSize": 19.127,
    "minFontSize": 17.3555,
    "step": -1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.0459rem, 1.012rem + 0.1694vw, 1.1433rem)",
    "label": "xs",
    "maxFontSize": 18.2922,
    "minFontSize": 16.734,
    "step": -2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.0084rem, 0.9789rem + 0.1477vw, 1.0934rem)",
    "label": "2xs",
    "maxFontSize": 17.4938,
    "minFontSize": 16.1348,
    "step": -3,
    "wcagViolation": undefined,
  },
]
`;

exports[`calculateTypeScale > should generate a valid scale 1`] = `
[
  {
    "clamp": "clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem)",
    "label": "5",
    "maxFontSize": 25,
    "minFontSize": 21.6,
    "step": 5,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.3017rem, 1.2347rem + 0.335vw, 1.4943rem)",
    "label": "4",
    "maxFontSize": 23.9088,
    "minFontSize": 20.8266,
    "step": 4,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.2551rem, 1.1945rem + 0.3027vw, 1.4291rem)",
    "label": "3",
    "maxFontSize": 22.8653,
    "minFontSize": 20.0808,
    "step": 3,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.2101rem, 1.1556rem + 0.2723vw, 1.3667rem)",
    "label": "2",
    "maxFontSize": 21.8672,
    "minFontSize": 19.3618,
    "step": 2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.1668rem, 1.118rem + 0.2439vw, 1.307rem)",
    "label": "1",
    "maxFontSize": 20.9128,
    "minFontSize": 18.6685,
    "step": 1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem)",
    "label": "0",
    "maxFontSize": 20,
    "minFontSize": 18,
    "step": 0,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.0847rem, 1.0462rem + 0.1926vw, 1.1954rem)",
    "label": "-1",
    "maxFontSize": 19.127,
    "minFontSize": 17.3555,
    "step": -1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.0459rem, 1.012rem + 0.1694vw, 1.1433rem)",
    "label": "-2",
    "maxFontSize": 18.2922,
    "minFontSize": 16.734,
    "step": -2,
    "wcagViolation": undefined,
  },
]
`;
